--- a/acme-material/Labs/Appendices/Installation/Installation.tex
+++ b/acme-material/Labs/Appendices/Installation/Installation.tex
@@ -34,10 +34,10 @@ This appendix introduces tools for installing and updating specific packages and
 
 
 \begin{warn}
-This curriculum uses Python 3.8.10, which is the default for Ubuntu
+This curriculum assumes Python 3.8.10, which is the default for Ubuntu
 20.04. With the wrong version of Python, some
 example code within the labs may not execute as intended or result in an
-error. Also the \href{https://imada.sdu.dk/~jlandersen/imada/it/complab.html#imada-comp-lab}{virtual Computer Lab} has installed Python 3.8.10
+error. Also the \href{https://imada.sdu.dk/u/jlandersen/imada/it/complab.html#imada-comp-lab}{virtual Computer Lab} has installed Python 3.8.10
 (via \lstinline{python3}).\footnote{Backward compatibility should be granted while if you
 use some of the new features of the latest versions of Python then you
 might get some errors in the earlier versions. In this latter case, you
@@ -103,7 +103,7 @@ executable \lstinline{python3}. For example to execute the script of the
 first (not graded) assignment:
 
 \begin{lstlisting}
-$ python3 asg0-onlytesting/onlytesting.py
+$ python3 asg0-tryout/tryout.py
 \end{lstlisting}
 
 
