--- a/_solutions/pagerank.ipynb
+++ b/_solutions/pagerank.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,27 +75,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.    0.707 0.    0.    0.707 0.   ]\n",
+      "[0.    0.289 0.866 0.289 0.    0.289]\n",
+      "[0.12  0.956 0.239 0.    0.12  0.   ]\n",
+      "[0.119 0.278 0.952 0.04  0.    0.04 ]\n",
+      "[0.134 0.954 0.267 0.    0.019 0.   ]\n",
+      "[0.133 0.273 0.953 0.006 0.    0.006]\n",
+      "[0.136 0.953 0.271 0.    0.003 0.   ]\n",
+      "[0.136 0.272 0.953 0.001 0.    0.001]\n",
+      "[0.136 0.953 0.272 0.    0.001 0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n",
+      "[0.136 0.953 0.272 0.    0.    0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n",
+      "[0.136 0.953 0.272 0.    0.    0.   ]\n",
+      "[0.136 0.272 0.953 0.    0.    0.   ]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Power method with Euclidean (L_2 norm) Scaling:\n",
     "x_0=np.array([0,0,0,0,0,1])\n",
     "x_n=x_0\n",
-    "for i in range(22):\n",
+    "for i in range(14):\n",
     "    x_n = np.dot(A1,x_n)\n",
-    "x_n"
+    "    x_n = x_n/np.linalg.norm(x_n,ord=2)\n",
+    "    print(x_n)\n",
+    "x_n/np.linalg.norm(x_n,1) # we mormalise to obtain again probabilities"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.  0.5 0.  0.  0.5 0. ]\n",
+      "[0.    0.167 0.5   0.167 0.    0.167]\n",
+      "[0.083 0.667 0.167 0.    0.083 0.   ]\n",
+      "[0.083 0.194 0.667 0.028 0.    0.028]\n",
+      "[0.097 0.694 0.194 0.    0.014 0.   ]\n",
+      "[0.097 0.199 0.694 0.005 0.    0.005]\n",
+      "[0.1   0.699 0.199 0.    0.002 0.   ]\n",
+      "[0.1   0.2   0.699 0.001 0.    0.001]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n",
+      "[0.1 0.7 0.2 0.  0.  0. ]\n",
+      "[0.1 0.2 0.7 0.  0.  0. ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Power method with sum (L_1 norm) Scaling:\n",
+    "x_0=np.array([0,0,0,0,0,1])\n",
+    "x_n=x_0\n",
+    "for i in range(14):\n",
+    "    x_n = np.dot(A1,x_n)\n",
+    "    x_n = x_n/np.linalg.norm(x_n,ord=1)\n",
+    "    print(x_n)\n",
+    "x_n # /np.linalg.norm(x_n,1) # we do not need to normalise "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 0. 0. 1. 0.]\n",
+      "[0.    0.333 1.    0.333 0.    0.333]\n",
+      "[0.125 1.    0.25  0.    0.125 0.   ]\n",
+      "[0.125 0.292 1.    0.042 0.    0.042]\n",
+      "[0.14 1.   0.28 0.   0.02 0.  ]\n",
+      "[0.14  0.287 1.    0.007 0.    0.007]\n",
+      "[0.142 1.    0.285 0.    0.003 0.   ]\n",
+      "[0.142 0.286 1.    0.001 0.    0.001]\n",
+      "[0.143 1.    0.286 0.    0.001 0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n",
+      "[0.143 1.    0.286 0.    0.    0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n",
+      "[0.143 1.    0.286 0.    0.    0.   ]\n",
+      "[0.143 0.286 1.    0.    0.    0.   ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1, 0.2, 0.7, 0. , 0. , 0. ])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Power method with maximum entry (L_\\infty norm) Scaling:\n",
+    "x_0=np.array([0,0,0,0,0,1])\n",
+    "x_n=x_0\n",
+    "for i in range(14):\n",
+    "    x_n = np.dot(A1,x_n)\n",
+    "    x_n = x_n/np.linalg.norm(x_n,ord=np.inf)\n",
+    "    print(x_n)\n",
+    "x_n/np.linalg.norm(x_n,1) # we need to normalise to obtain probabilities\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def power_method(A, x_0, niter, scaling=2):\n",
+    "    x_n=x_0/np.linalg.norm(x_0,scaling)\n",
+    "    for i in range(niter):\n",
+    "        x_n = np.dot(A,x_n)\n",
+    "        x_n = x_n/np.linalg.norm(x_n,ord=scaling)\n",
+    "        print(x_n)\n",
+    "    x_n/np.linalg.norm(x_n,ord=1) # we mormalise to obtain again probabilities\n",
+    "    return x_n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -106,26 +244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.1, 0.7, 0.2, 0. , 0. , 0. ])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "power_method() missing 1 required positional argument: 'niter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [39]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m x_0\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[43mpower_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_0\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: power_method() missing 1 required positional argument: 'niter'"
+     ]
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,0,0,1])\n",
-    "x_n=x_0\n",
-    "for i in range(21):\n",
-    "    x_n = np.dot(A1,x_n)\n",
-    "x_n"
+    "power_method(x_0,15)"
    ]
   },
   {
@@ -137,26 +273,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0.5, 0. , 0.5, 0. , 0. , 0. ])"
+       "array([0.707, 0.   , 0.707, 0.   , 0.   , 0.   ])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "x_n=x_0\n",
-    "for i in range(22):\n",
-    "    x_n = np.dot(A1, x_n)\n",
-    "x_n"
+    "power_method(x_0, 14)"
    ]
   },
   {
@@ -168,26 +321,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n",
+      "[0.707 0.    0.707 0.    0.    0.   ]\n",
+      "[0.707 0.707 0.    0.    0.    0.   ]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0.5, 0.5, 0. , 0. , 0. , 0. ])"
+       "array([0.707, 0.707, 0.   , 0.   , 0.   , 0.   ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "x_n = x_0\n",
-    "for i in range(21):\n",
-    "    x_n = np.dot(A1,x_n)\n",
-    "x_n"
+    "power_method(x_0, 15)"
    ]
   },
   {
@@ -204,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,47 +424,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.167, 0.167, 0.167, 0.167, 0.167, 0.167],\n",
+       "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167],\n",
+       "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167],\n",
+       "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167],\n",
+       "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167],\n",
+       "       [0.167, 0.167, 0.167, 0.167, 0.167, 0.167]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A2 = 1/6*np.ones((6,6))"
+    "A2 = 1/6*np.ones((6,6))\n",
+    "A2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n",
+      "[0.408 0.408 0.408 0.408 0.408 0.408]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([0.167, 0.167, 0.167, 0.167, 0.167, 0.167])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "x_n = x_0\n",
-    "for i in range(21):\n",
-    "    x_n = np.dot(A2,x_n)\n",
-    "x_n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hence, every node is eqaully likely and we gain no information."
+    "x=power_method(A2,x_0,niter=14)\n",
+    "x/np.linalg.norm(x,ord=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,14 +521,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix is positive hence it is a dominant eigenvalue equal to 1. The corresponding eigenvector is a vectors of entries or 1 or normalized as in the matrix P above.\n",
+    "The matrix is positive hence it has a dominant eigenvalue equal to 1. The corresponding eigenvector is a vector of entries of 1 or normalized as in the matrix P above.\n",
     "\n",
     "If we can calculate the eigenvalues because computationally feasibile as in these small examples, we can also find the steady-state vectors by applying the theory seen on slide 20."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,17 +547,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Subtask c."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,26 +564,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.705 0.705 0.039 0.039 0.039 0.039]\n",
+      "[0.707 0.126 0.689 0.054 0.06  0.054]\n",
+      "[0.682 0.707 0.153 0.061 0.067 0.061]\n",
+      "[0.681 0.256 0.676 0.065 0.072 0.065]\n",
+      "[0.654 0.699 0.264 0.066 0.073 0.066]\n",
+      "[0.649 0.358 0.66  0.068 0.076 0.068]\n",
+      "[0.626 0.686 0.35  0.068 0.076 0.068]\n",
+      "[0.62  0.433 0.642 0.07  0.077 0.07 ]\n",
+      "[0.602 0.672 0.413 0.069 0.077 0.069]\n",
+      "[0.596 0.486 0.626 0.07  0.078 0.07 ]\n",
+      "[0.582 0.659 0.459 0.07  0.078 0.07 ]\n",
+      "[0.577 0.524 0.613 0.071 0.078 0.071]\n",
+      "[0.567 0.649 0.492 0.07  0.078 0.07 ]\n",
+      "[0.563 0.551 0.603 0.071 0.078 0.071]\n",
+      "[0.555 0.641 0.515 0.07  0.078 0.07 ]\n",
+      "[0.552 0.57  0.595 0.071 0.078 0.071]\n",
+      "[0.546 0.635 0.531 0.07  0.078 0.07 ]\n",
+      "[0.544 0.584 0.59  0.071 0.078 0.071]\n",
+      "[0.539 0.631 0.543 0.07  0.078 0.07 ]\n",
+      "[0.538 0.593 0.585 0.071 0.078 0.071]\n",
+      "[0.535 0.627 0.552 0.071 0.078 0.071]\n",
+      "[0.533 0.6   0.582 0.071 0.078 0.071]\n",
+      "[0.531 0.625 0.558 0.071 0.078 0.071]\n",
+      "[0.53  0.605 0.58  0.071 0.078 0.071]\n",
+      "[0.529 0.623 0.562 0.071 0.078 0.071]\n",
+      "[0.528 0.609 0.578 0.071 0.078 0.071]\n",
+      "[0.527 0.622 0.566 0.071 0.078 0.071]\n",
+      "[0.526 0.611 0.577 0.071 0.078 0.071]\n",
+      "[0.526 0.621 0.568 0.071 0.078 0.071]\n",
+      "[0.525 0.613 0.576 0.071 0.078 0.071]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([0.277, 0.324, 0.285, 0.036, 0.041, 0.036])"
+       "array([0.525, 0.613, 0.576, 0.071, 0.078, 0.071])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_0=np.array([0,0,0,1,0,0])\n",
-    "x_n = x_0\n",
-    "for i in range(21):\n",
-    "    x_n = np.dot(A,x_n)\n",
-    "x_n"
+    "power_method(A,x_0,niter=30)"
    ]
   },
   {
@@ -398,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -447,8 +677,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The slight discrepancies might be due to rounding erros or to an insufficient number of iterations, 21, in the power method. "
+    "The slight discrepancies might be due to rounding erros or to an insufficient number of iterations in the power method. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -459,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
