--- a/_solutions/wienerpolygon/sources.bib
+++ b/_solutions/wienerpolygon/sources.bib
@@ -45,7 +45,7 @@
 @MISC{graph_slides,
 	author = "Daniel Merkle",
 	title = "{The Graph-(and the Subgraph)-Isomorphism Problem, the Ullmann Algorithm,and Applications in Chemistry}",
-	howpublished = "URL \url{https://dm587.github.io/assets/dm587-Graphs-small.pdf}",
+	howpublished = "URL \url{https://dm587.github.io/assets/dm587-Graphs.pdf}",
 	year = "2020"
 }
 
